[project]
name = "progress-watchdog"
dynamic = ["version"]
authors = [
    { name="Chris Patti", email="feoh@feoh.org" },
]
description = "Progress Watchdog is a Python package that helps you avoid staying stuck or getting tunnel vision while time flows by."
readme = "README.md"
license = {text="MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.13"
dependencies = [
    "playsound>=1.3.0",
    "pynput>=1.8.0",
]

