[project]
name = "progress-watchdog"
version = "0.1.5"
description = "Progress Watchdog is a Python package that helps you avoid staying stuck or getting tunnel vision while time flows by."
readme = "README.md"
authors = [
    { name = "Chris Patti", email = "feoh@feoh.org" }
]
requires-python = ">=3.13"
dependencies = [
    "playsound",
    "pynput>=1.8.0",
]
license = "MIT"
[project.scripts]
progress-watchdog = "progress_watchdog:main"

[build-system]
requires = ["uv_build>=0.8.5,<0.9.0"]
build-backend = "uv_build"

[tool.setuptools.packages.find]
where = ["."]
include = ["progress_watchdog"]

[tool.setuptools.package-data]
my_sound_package = ["sounds/*.mp3", "sounds/*.wav"]

[tool.uv.sources]
playsound = { git = "ssh://git@github.com/taconi/playsound.git" }
